# cets-empiar

./: .env_template  .gitignore  README.md  pyproject.toml
cets_empiar/: annotation_utils.py  cets_utils.py  cli.py  config.py  empiar_utils.py  metadata_utils.py  settings.py  thumbnail.py  utils.py  yaml_parsing.py
cets_empiar/cets/: alignment.py  annotations.py  movie_stack_collection.py  region.py  tilt_series.py  tomogram.py
cets_empiar/cets_to_ro_crate/: cets_conversion.py  ro_crate_defaults.py
cets_empiar/cets_to_ro_crate/entity_conversion/: dataset.py  file_list.py
cets_empiar/empiar_to_cets/: empiar_conversion.py
cets_empiar/empiar_to_cets/conversion/: alignment.py  annotation.py  coordinate_system.py  coordinate_transformation.py  movie_stack_collection.py  tilt_series.py  tomogram.py
cets_empiar/empiar_to_cets/conversion/entity_conversion/: coordinate_system.py  coordinate_transformation.py  region.py  tilt_series_and_movie.py  tomogram.py
cets_empiar/empiar_to_cets/parsing/: metadata_parsing.py  yaml_parsing.py
cets_empiar/empiar_to_cets/utils/: annotation_utils.py  empiar_utils.py  metadata_models.py  metadata_utils.py  yaml_parsing.py
cets_empiar/thumbnails/: cets_data_thumbnail_generation.py  thumbnail_image_utils.py
cets_empiar/validation/: validation.py
cets_empiar/validation/validator_models/: point_annotation.py
definition_files/: empiar_10164.yaml  empiar_12104.yaml
definition_files/cets/: empiar_12104.yaml
definition_files/empiar/: empiar_10164.yaml  empiar_12104.yaml
examples/CETS_objects/: EMPIAR-12104.json
test/: conftest.py  test_empiar_to_cets.py  test_mdoc_parsing.py
test/input_data/: TS_001.mdoc  TS_complex.mdoc  TS_minimal.mdoc  TS_snake_case.mdoc  TS_t_section_comma.mdoc  TS_t_section_space.mdoc  TS_t_section_text.mdoc  TS_value_types.mdoc  empiar_file_list.json  test_with_metadata_definition.yaml  test_without_metadata_definition.yaml
test/output_data/: expected_cets_output_with_metadata.json  expected_cets_output_without_metadata.json  expected_mdoc_basic.json  expected_mdoc_complex.json  expected_mdoc_minimal.json  expected_mdoc_snake_case.json  expected_mdoc_t_comma.json  expected_mdoc_t_space.json  expected_mdoc_t_text.json  expected_mdoc_value_types.json
